# Ti

./: .all_hits_files.txt  .cmd_hits.txt  .cmd_hits_files.txt  .cmd_hits_v2.txt  .coverage  .dl.txt  .env.bak.verify  .env.example  .gitignore  .pre-commit-config.yaml  .venv  .venv_hits.txt  .wb_hits_files.txt  ARCHITECTURE.md  ASSESSMENT_inventory_task1.md  BASELINE_task1.md  BLOCKER_TASK1.md  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  CLOSURE_task1.md  CLOSURE_task2.md  CLOSURE_task3.md  CLOSURE_task4.md  CLOSURE_task4_failure_followups.md  CLOSURE_task5.md  CONTRIBUTING.md  DECISIONS.md  INVENTORY_task1.md  KNOWN_LIMITATIONS.md  Makefile  NOTES.md  README.md  REVIEW.md  TASK1_DELIVERY.md  VERIFICATION_REPORT_inventory_task1.md  VERIFICATION_REPORT_task1_openai_compat_wiring.md  VERIFICATION_REPORT_task4.md  adr.json  pyproject.toml  (+2 more)
.github/workflows/: ci.yml  publish-release.yml  release-smoke.yml
.qa_artifacts/prompt_cache_ab/: dry-run.json  dry-run.md  latest.json  latest.md
.qa_artifacts/task1_retry_doc/: verify_report.md  verify_report.md.sha256  verify_task1_mergebase_fetch.sh
.qa_artifacts/task2/: rest_body.raw
.qa_artifacts/task3/: superseded-decision-inventory-2026-07-08.md  test_ci_evidence_authority_acceptance.py
deploy/: ti-autodeploy.service  ti-autodeploy.timer  ti-autopilot.service  ti-claude-token-refresh.py  ti-claude-token-refresh.service  ti-claude-token-refresh.timer  ti-layer3-liveness.py  ti-layer3-monitor.service  ti-layer3-monitor.sh  ti-layer3-monitor.timer  ti-watchdog.service  ti-watchdog.sh  ti-watchdog.timer
docs/: CLOSEOUT_provider_preflight_routing_qa.md  PROMPT_CACHE_AB_REPORT.md  RESEARCH.md  SMOKE_REPORT.md  VERIFY_metrics_panel.md  breaking-changes-drift-verification.md  latency-data-audit.md  latency-improvement-report.md  llm-caller-public-contract.md  loopback-endpoint-audit.md  release-e2e-authoritative-declaration-2026-07-08.md  release-e2e-closure-report.md  release-e2e-handoff.md  release-pipeline-requirements-audit.md  roadmap.md  ruff-precommit-fix-gate.md  task3-authoritative-decision-2026-07-08.md  token-rotation-runbook.md  uat-settings-checklist.md  workflows.md
docs/evidence/: layer3-task4-live-monitor-2026-07-20.md  release-smoke-v0.2.0-trigger.json  release-v0.2.0-body-structure-verdict.json  release-v0.2.0-online-body.json  release-v0.2.0-online-reverify-2026-07-07.json  release-v0.2.0-rerun-20260706.json  token-rotation-2026-07-10.md
docs/guides/: autonomy-governance.md  autopilot-monitoring.md  code-reviewer-checklist.md  deploy-drift-runbook.md
docs/issues/: 0001-forwarded-allow-ips-hardening.md  0002-qa-server-fixture-missing-teardown.md
docs/perf/: prompt-cache-selection.md  prompt-cache-verification.md
pytest-of-root/: pytest-current
pytest-of-root/pytest-0/: test_report_sha256_literals_arcurrent  test_sha256_scanner_has_strictcurrent
roles/: _example.md.sample
scripts/: aggregate_history_meta.py  baseline_selftest.sh  capture_metrics.py  check_release_body_structure.py  clean-verification-task-3-EVIDENCE.md  measure_prompt_cache_ab.py  publish_release.py  qa_check_pr_body_evidence.py  redeploy.sh  reverify-release-v020-task1.sh  reverify_release_body.py  run_tests_parallel.sh  scan_bare_pytest.sh  scan_shell_usage.sh  serve.sh  smoke_llm.py  verify-clean.ROUND4-EVIDENCE.md  verify-clean.sh  verify-release-e2e-task3.sh  verify-task1.sh  verify-task3.sh  verify_authority_report_28933251516.py  verify_task360_remote_sync.sh  verify_token_rotation.sh
studio/: __init__.py  adr.py  antigravity_usage.py  appraisal.py  auth.py  autodeploy.py  autonomy.py  autonomy_preflight.py  autonomy_review.py  autopilot.py  backlog.py  blueprint.py  claude_accounts.py  claude_usage.py  codex_usage.py  conclusion.py  config.py  conventions.py  deploy.py  digest.py  discussion.py  email_renderer.py  events.py  expert_wrap.py  experts.py  fake_experts.py  flow.py  git_cred.py  history.py  improver.py  insights.py  interventions.py  jsonl_log.py  lessons.py  lint.py  llm_caller.py  memory.py  minimax_usage.py  netutil.py  notify.py  (+27 more)
studio/docs/: dev_command_dedup_inventory.md  inventory_line_guard_convention.md  jitter_backoff_inventory.md  lane_baseline_injection_inventory.md  llm_caller_inventory.md  subprocess_migration_inventory.md  transition_await_inventory.md
tests/: _frontend_env.mjs  _repo.py  _routes.py  _scope_guard.py  conftest.py  frontend_account_menu_test.mjs  frontend_attention_test.mjs  frontend_autopilot_activity_test.mjs  frontend_dashboard_test.mjs  frontend_groups_panel_test.mjs  frontend_handleEvent_test.mjs  frontend_handleevent_smoke.mjs  frontend_home_chat_test.mjs  frontend_home_view_test.mjs  frontend_markdown_test.mjs  frontend_plugins_panel_test.mjs  frontend_project_create_modal_test.mjs  frontend_project_panel_test.mjs  frontend_project_recover_test.mjs  frontend_reconnect_test.mjs  frontend_roles_panel_test.mjs  frontend_schedules_panel_test.mjs  frontend_settings_recommend_test.mjs  frontend_settings_render_test.mjs  frontend_settings_save_test.mjs  frontend_sidenav_history_test.mjs  frontend_stage_editor_test.mjs  frontend_stage_panel_test.mjs  frontend_task_card_test.mjs  frontend_theme_test.mjs  frontend_workflow_editor_test.mjs  qa_task1_blocker_truthfulness.py  qa_test_render_agenda_criteria.py  qa_test_task1_agenda_criteria_locator.py  qa_test_verification_warning_contract.py  test_antigravity_usage.py  test_auth.py  test_autopilot_push_merge_flags.py  test_base_repo_wiring.py  test_clarify_vision_backfill.py  (+195 more)
tests/autopilot/: _qa_task4_verify_reverse.py  _release_check.py  test_attention.py  test_audit_jsonl.py  test_audit_rotation.py  test_auto_triage.py  test_autodeploy_module.py  test_autonomy_governance.py  test_autonomy_preflight.py  test_autonomy_review.py  test_autopilot_discovery_oversub.py  test_autopilot_done_fields.py  test_autopilot_eval_memory.py  test_autopilot_followups.py  test_autopilot_north_star.py  (+146 more)
tmp/: clean-verification-task-2-20260615T170500Z.md  inspect_agenda_criteria.py  qa_task1_verify.py
web/: app.js  index.html  login.html  login.js  styles.css
(+305 files in other folders)
