[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-studio"
version = "0.1.0"
description = "AI 專家討論工作室 — 多智能體自主軟體開發 studio (Claude Agent SDK)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.110",
    # 鎖定 uvicorn>=0.31 以強化 ProxyHeaders 信任鏈、避免 X-Forwarded-For 取最左值偽造 client IP。
    # 下限提升至 0.31：CIDR 信任網段與 IPv6 支援在 0.31.0 才完整落地（K8s/Swarm 等 proxy IP
    # 會變動的環境需 CIDR），讓「需要 CIDR」在依賴宣告層被保證，避免有人降到 0.30.x 而功能默默失效。
    # 防護已由 server.main() 落地（issue #0001）：傳入 proxy_headers=True 與
    # forwarded_allow_ips=config.forwarded_allow_ips()（預設 proxy 私網範圍、嚴禁 "*"）。
    "uvicorn[standard]>=0.31,<0.50",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]
openai = [
    "openai>=1.30",
]

[tool.setuptools]
packages = ["studio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F：pycodestyle + pyflakes；I：import 排序；UP：pyupgrade；B：bugbear。
select = ["E", "F", "I", "UP", "B"]
# 行長由 formatter 處理，放寬個別過長行（多為中文註解）。
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
