[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-studio"
version = "0.2.0"
description = "AI 專家討論工作室 — 多智能體自主軟體開發 studio (Claude Agent SDK)"
readme = "README.md"
# 部署實跑 3.12;3.11/3.12 為支援目標。3.10 的 asyncio.wait_for 取消/逾時語意與 3.11+
# 不同（3.11 重寫 task 取消、3.12 以 asyncio.timeout 重實作），會讓發言層 watchdog 逾時測試
# 在 3.10 外洩 CancelledError/TimeoutError 而非收斂成 ExpertTurnTimeout;非部署目標,不支援。
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    # fastapi 上限 <0.116 + 明確鎖 starlette <0.42：fastapi 0.116+ 會拉進 starlette 1.x
    # （路由／TestClient 行為大改，曾讓 CI 全套 route 測試「找不到路由」），鎖到正式站實跑的
    # 已知可用版本（fastapi 0.115.x／starlette 0.41.x），避免 unpinned 全新安裝漂移到
    # starlette 1.x 而讓 CI 紅、甚至下次 autodeploy 重裝把正式站也弄壞。
    "fastapi>=0.110,<0.116",
    "starlette>=0.40,<0.42",
    # 鎖定 uvicorn>=0.31 以強化 ProxyHeaders 信任鏈、避免 X-Forwarded-For 取最左值偽造 client IP。
    # 下限提升至 0.31：CIDR 信任網段與 IPv6 支援在 0.31.0 才完整落地（K8s/Swarm 等 proxy IP
    # 會變動的環境需 CIDR），讓「需要 CIDR」在依賴宣告層被保證，避免有人降到 0.30.x 而功能默默失效。
    # 防護已由 server.main() 落地（issue #0001）：傳入 proxy_headers=True 與
    # forwarded_allow_ips=config.forwarded_allow_ips()（預設 proxy 私網範圍、嚴禁 "*"）。
    "uvicorn[standard]>=0.31,<0.50",
    "python-dotenv>=1.0",
    "httpx>=0.27,<0.29",
    # role_store.py 直接 import：pydantic 鎖 v2（用了 ConfigDict/model_validate 等 v2-only API；
    # fastapi>=0.110 仍允許 v1，不宣告下限的話解析器選到 v1 會讓 server 頂層 import 直接炸）；
    # PyYAML 過去僅為 uvicorn[standard] 的轉依賴，直接 import 的套件必須直接宣告。
    "pydantic>=2",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    # 精確鎖定：linter/formatter 跨版本格式判定會分歧，須與 CI 及 .pre-commit-config.yaml
    # 的 rev 同版。釘 0.14.4（非當前最新）以對齊 CI workflow 既有的 `pip install ruff==0.14.4`，
    # 升版時三端須一併更新並重跑 ruff format --check。
    "ruff==0.14.4",
    "pre-commit>=3.7",
]
openai = [
    "openai>=1.30",
]

[tool.setuptools]
packages = ["studio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 把專案根目錄釘上 sys.path，讓 `from studio import ...` 在 bare `pytest`（非
# `python3 -m pytest`）下也能解析——後者才會自動把 cwd 加入 sys.path，前者不會。
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "realgit: 走本機真 git（file:// URL，零網路）的整合測試，豁免「禁真子程序」保險絲",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".trash-*"]

[tool.ruff.lint]
# E/F：pycodestyle + pyflakes；I：import 排序；UP：pyupgrade；B：bugbear。
select = ["E", "F", "I", "UP", "B"]
# 行長由 formatter 處理，放寬個別過長行（多為中文註解）。
ignore = ["E501"]

[tool.ruff.lint.isort]
# 把多個 `from x import a as a` 顯式 re-export（如 orchestrator 對 flow 的相容層）併成
# 單一括號區塊，而非每個別名各自一行。
combine-as-imports = true
# 專案 runtime 為 Python 3.11+；Ruff target 仍是 py310 時需明確把 tomllib 視為標準庫。
extra-standard-library = ["tomllib"]

[tool.ruff.format]
quote-style = "double"
